--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,29 +4,24 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Minh Thu Orchids - <%= @title %></title>
 
-    <%= javascript_include_tag 'jquery/jquery-1.4.2.min' %>
+    <%= stylesheet_link_tag 'reset-min'  %>
+    <%= stylesheet_link_tag 'application'  %>
+    <%#= javascript_include_tag 'jquery/jquery-1.4.2.min' %>
   </head>
 
   <body>
     <div id="main">
-      <div id="top">
-        <%#= render :partial => "/layouts/main_menu" %>
+      <div id="left">
+        <%= render :partial => "/layouts/main_menu" %>
       </div>
 
       <div id="body_container">
-        <%#= render :partial => "/layouts/flash", :object => flash %>
-
         <%= yield %>
       </div>
 
       <div class="clear"></div>
-
-      <div id="footer">
-        <%#= render :partial => "/layouts/user_menu" %>
-      </div>
-
-      <div id="bottom">Copyright 2011 Minh Thu Orchids</div>
     </div>
 
+    <div id="bottom">Copyright 2011 Minh Thu Orchids</div>
   </body>
 </html>
