--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,9 @@
 
     <%= stylesheet_link_tag 'reset-min'  %>
     <%= stylesheet_link_tag 'application'  %>
-    <%#= javascript_include_tag 'jquery/jquery-1.4.2.min' %>
+
+    <%= javascript_include_tag "jquery-1.4.2.min.js" %>
+    <%= javascript_include_tag "jquery.fancybox-1.3.1.js" %>
   </head>
 
   <body>
@@ -25,3 +27,11 @@
     <div id="bottom">Copyright 2011 Minh Thu Orchids</div>
   </body>
 </html>
+
+<script type="text/javascript">
+  var $j = jQuery.noConflict();
+
+  $j(document).ready(function(){
+    $j('.thumb').fancybox();
+  });
+</script>
