--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,3 +1,5 @@
+@import "fancybox/jquery.fancybox-1.3.1.css";
+
 html, body {
     background: #FFFFFF;
     padding-bottom: 30px;
@@ -7,8 +9,9 @@ html, body {
     width: 960px;
     margin: auto;
     background: #fff;
+    margin-top: 50px;
+    padding-top: 20px;
     padding-bottom: 20px;
-
 }
 
 #left {
@@ -98,4 +101,21 @@ html, body {
     line-height: 25px;
     list-style-type: disc;
 }
+
+.image_1st, .image_2nd, .image_3rd {
+    width: 220px;
+    float: left;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.image_1st, .image_2nd {
+    margin-right: 10px;
+}
+
+.image_2nd, .image_3rd {
+    margin-left: 10px;
+}
+
+
 
