--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -8,7 +8,7 @@ html, body {
 #main {
     width: 960px;
     margin: auto;
-    background: #fff;
+    background: #FFFFFF;
     margin-top: 50px;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -60,11 +60,12 @@ html, body {
     line-height:18px;
     font-size: 12px;
     text-decoration: none;
-    color: #333;
+    color: #545454;
 }
 
-#left a.left_selected {
-    color: fuchsia;
+
+#left a.left_selected, #left a:hover {
+    color: #812D7B;
 }
 
 .clear {
@@ -106,7 +107,13 @@ html, body {
     width: 220px;
     float: left;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
+    text-transform: uppercase;
+    line-height:30px;
+    font-size: 12px;
+    text-decoration: none;
+    color: #545454;
+    background: url('../images/transparent.png') repeat;
 }
 
 .image_1st, .image_2nd {
