--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,18 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Minh Thu Orchids - <%= @title %></title>
+    <link rel="shortcut icon" href="/images/icon.png" />
 
     <%= stylesheet_link_tag 'reset-min'  %>
     <%= stylesheet_link_tag 'application'  %>
 
     <%= javascript_include_tag "jquery-1.4.2.min.js" %>
     <%= javascript_include_tag "jquery.fancybox-1.3.1.js" %>
+    <%= javascript_include_tag "cufon-yui.js" %>
+    <%= javascript_include_tag "AvantGarde.font.js" %>
+    <script type="text/javascript">
+      Cufon.replace("#main");
+    </script>
   </head>
 
   <body>
@@ -25,6 +31,7 @@
     </div>
 
     <div id="bottom">Copyright 2011 Minh Thu Orchids</div>
+    <script type="text/javascript"> Cufon.now(); </script>
   </body>
 </html>
 
