--- a/app/views/general/anniversary.html.erb
+++ b/app/views/general/anniversary.html.erb
@@ -1,22 +1,22 @@
 <a class="image_1st thumb" href="/images/flowers/HDB2_700.jpg">
   <%= image_tag '/images/flowers/HDB2.jpg', :width => '220px' %>
   <br />
-  VND 250.000 | $12.5
+  VND 250.000&nbsp;&nbsp;|&nbsp;&nbsp;$12.5
 </a>
 <a class="image_2nd thumb" href="/images/flowers/HDB9_700.jpg">
   <%= image_tag '/images/flowers/HDB9.jpg', :width => '220px' %>
   <br />
-  VND 350.000 | $17.5
+  VND 350.000&nbsp;&nbsp;|&nbsp;&nbsp;$17.5
 </a>
 <a class="image_3rd thumb" href="/images/flowers/HDB11_700.jpg">
   <%= image_tag '/images/flowers/HDB11.jpg', :width => '220px' %>
   <br />
-  VND 400.000 | $20
+  VND 400.000&nbsp;&nbsp;|&nbsp;&nbsp;$20
 </a>
 <span class="clear"></span>
 
 <a class="image_1st thumb" href="/images/flowers/HDB12_700.jpg">
   <%= image_tag '/images/flowers/HDB12.jpg', :width => '220px' %>
   <br />
-  VND 500.000 | $25
+  VND 500.000&nbsp;&nbsp;|&nbsp;&nbsp;$25
 </a>
