--- a/app/views/general/woman_day.html.erb
+++ b/app/views/general/woman_day.html.erb
@@ -1,51 +1,51 @@
 <a class="image_1st thumb" href="/images/flowers/HDB1_700.jpg">
   <%= image_tag '/images/flowers/HDB1.jpg', :width => '220px' %>
   <br />
-  VND 250.000 | $12.5
+  VND 250.000&nbsp;&nbsp;|&nbsp;&nbsp;$12.5
 </a>
 <a class="image_2nd thumb" href="/images/flowers/HDB3_700.jpg">
   <%= image_tag '/images/flowers/HDB3.jpg', :width => '220px' %>
   <br />
-  VND 350.000 | $17.5
+  VND 350.000&nbsp;&nbsp;|&nbsp;&nbsp;$17.5
 </a>
 <a class="image_3rd thumb" href="/images/flowers/HDB4_700.jpg">
   <%= image_tag '/images/flowers/HDB4.jpg', :width => '220px' %>
   <br />
-  VND 300.000 | $15
+  VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
 </a>
 <span class="clear"></span>
 
 <a class="image_1st thumb" href="/images/flowers/HDB5_700.jpg">
   <%= image_tag '/images/flowers/HDB5.jpg', :width => '220px' %>
   <br />
-  VND 300.000 | $15
+  VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
 </a>
 <a class="image_2nd thumb" href="/images/flowers/HDB6_700.jpg">
   <%= image_tag '/images/flowers/HDB6.jpg', :width => '220px' %>
   <br />
-  VND 350.000 | $17.5
+  VND 350.000&nbsp;&nbsp;|&nbsp;&nbsp;$17.5
 </a>
 <a class="image_3rd thumb" href="/images/flowers/HDB7_700.jpg">
   <%= image_tag '/images/flowers/HDB7.jpg', :width => '220px' %>
   <br />
-  VND 350.000 | $17.5
+  VND 350.000&nbsp;&nbsp;|&nbsp;&nbsp;$17.5
 </a>
 <span class="clear"></span>
 
 <a class="image_1st thumb" href="/images/flowers/HDB8_700.jpg">
   <%= image_tag '/images/flowers/HDB8.jpg', :width => '220px' %>
   <br />
-  VND 250.000 | $12.5
+  VND 250.000&nbsp;&nbsp;|&nbsp;&nbsp;$12.5
 </a>
 <a class="image_2nd thumb" href="/images/flowers/HDB13_700.jpg">
   <%= image_tag '/images/flowers/HDB13.jpg', :width => '220px' %>
   <br />
-  VND 450.000 | $22.5
+  VND 450.000&nbsp;&nbsp;|&nbsp;&nbsp;$22.5
 </a>
 <a class="image_3rd thumb" href="/images/flowers/HG2_700.jpg">
   <%= image_tag '/images/flowers/HG2.jpg', :width => '220px' %>
   <br />
-  VND 300.000 | $15
+  VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
 </a>
 <span class="clear"></span>
 
