--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= javascript_include_tag "cufon-yui.js" %>
     <%= javascript_include_tag "AvantGarde.font.js" %>
     <script type="text/javascript">
-      Cufon.replace("#main");
+      Cufon.replace("#left");
     </script>
   </head>
 
