--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,5 +40,6 @@
 
   $j(document).ready(function(){
     $j('.thumb').fancybox();
+    $j('.cufon-canvas').css("height", "20px");
   });
 </script>
