--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,6 +1,7 @@
 @import "fancybox/jquery.fancybox-1.3.1.css";
 
 html, body {
+    font: normal 100%/1.4em "Helvetica Neue", Helvetica, Arial, sans-serif;
     background: #FFFFFF;
     padding-bottom: 30px;
 }
