Fix bug losing image when loading

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
   var $j = jQuery.noConflict();
 
   $j(document).ready(function(){
+    $j('#body_container').show();
     $j('.thumb').fancybox();
     $j('.cufon-canvas').css("height", "20px");
   });
