change the images of flowers

--- a/app/views/general/valentine.html.erb
+++ b/app/views/general/valentine.html.erb
@@ -1,16 +1,16 @@
 <a class="image_1st thumb" href="/images/flowers/HG7_700.jpg">
-  <%= image_tag '/images/flowers/HG7.jpg', :width => '220px' %>
-  <br />
+  <div class="thumb_div" style="background: url('/images/flowers/HG7.jpg');">
+  </div>
   VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
 </a>
 <a class="image_2nd thumb" href="/images/flowers/HV1_700.jpg">
-  <%= image_tag '/images/flowers/HV1.jpg', :width => '220px' %>
-  <br />
+  <div class="thumb_div" style="background: url('/images/flowers/HV1.jpg');">
+  </div>
   VND 800.000&nbsp;&nbsp;|&nbsp;&nbsp;$40
 </a>
 <a class="image_3rd thumb" href="/images/flowers/HV2_700.jpg">
-  <%= image_tag '/images/flowers/HV2.jpg', :width => '220px' %>
-  <br />
+  <div class="thumb_div" style="background: url('/images/flowers/HV2.jpg');">
+  </div>
   VND 250.000&nbsp;&nbsp;|&nbsp;&nbsp;$12.5
 </a>
 <span class="clear"></span>
