change the images of flowers

--- a/app/views/general/birthday.html.erb
+++ b/app/views/general/birthday.html.erb
@@ -1,39 +1,39 @@
 <a class="image_1st thumb" href="/images/flowers/HDB10_700.jpg">
-  <div class="thumb_div" style="background: url('/images/flowers/HDB10.jpg');">
-  </div>
+  <%= image_tag '/images/flowers/HDB10.jpg', :width => '220px' %>
+  <br />
   VND 350.000&nbsp;&nbsp;|&nbsp;&nbsp;$17.5
 </a>
 <a class="image_2nd thumb" href="/images/flowers/HDB14_700.jpg">
-  <div class="thumb_div" style="background: url('/images/flowers/HDB14.jpg');">
-  </div>
+  <%= image_tag '/images/flowers/HDB14.jpg', :width => '220px' %>
+  <br />
   VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
 </a>
 <a class="image_3rd thumb" href="/images/flowers/HG1_700.jpg">
-  <div class="thumb_div" style="background: url('/images/flowers/HG1.jpg');">
-  </div>
+  <%= image_tag '/images/flowers/HG1.jpg', :width => '220px' %>
+  <br />
   VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
 </a>
 <span class="clear"></span>
 
 <a class="image_1st thumb" href="/images/flowers/HG3_700.jpg">
-  <div class="thumb_div" style="background: url('/images/flowers/HG3.jpg');">
-  </div>
+  <%= image_tag '/images/flowers/HG3.jpg', :width => '220px' %>
+  <br />
   VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
 </a>
 <a class="image_2nd thumb" href="/images/flowers/HG4_700.jpg">
-  <div class="thumb_div" style="background: url('/images/flowers/HG4.jpg');">
-  </div>
+  <%= image_tag '/images/flowers/HG4.jpg', :width => '220px' %>
+  <br />
   VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
 </a>
 <a class="image_3rd thumb" href="/images/flowers/HG5_700.jpg">
-  <div class="thumb_div" style="background: url('/images/flowers/HG5.jpg');">
-  </div>
+  <%= image_tag '/images/flowers/HG5.jpg', :width => '220px' %>
+  <br />
   VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
 </a>
 <span class="clear"></span>
 
 <a class="image_1st thumb" href="/images/flowers/HG6_700.jpg">
-  <div class="thumb_div" style="background: url('/images/flowers/HG6.jpg');">
-  </div>
+  <%= image_tag '/images/flowers/HG6.jpg', :width => '220px' %>
+  <br />
   VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
 </a>
