Add orchids page

--- a/app/views/general/occasion.html.erb
+++ b/app/views/general/occasion.html.erb
@@ -1,1 +1,131 @@
-No Image
+<a class="image_1st thumb" href="/images/flowers/HDB1_700.jpg">
+  <%= image_tag '/images/flowers/HDB1.jpg', :width => '220px' %>
+  <br />
+  VND 250.000&nbsp;&nbsp;|&nbsp;&nbsp;$12.5
+</a>
+<a class="image_2nd thumb" href="/images/flowers/HDB2_700.jpg">
+  <%= image_tag '/images/flowers/HDB2.jpg', :width => '220px' %>
+  <br />
+  VND 250.000&nbsp;&nbsp;|&nbsp;&nbsp;$12.5
+</a>
+<a class="image_3rd thumb" href="/images/flowers/HDB3_700.jpg">
+  <%= image_tag '/images/flowers/HDB3.jpg', :width => '220px' %>
+  <br />
+  VND 350.000&nbsp;&nbsp;|&nbsp;&nbsp;$17.5
+</a>
+<span class="clear"></span>
+
+<a class="image_1st thumb" href="/images/flowers/HDB4_700.jpg">
+  <%= image_tag '/images/flowers/HDB4.jpg', :width => '220px' %>
+  <br />
+  VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
+</a>
+<a class="image_2nd thumb" href="/images/flowers/HDB5_700.jpg">
+  <%= image_tag '/images/flowers/HDB5.jpg', :width => '220px' %>
+  <br />
+  VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
+</a>
+<a class="image_3rd thumb" href="/images/flowers/HDB6_700.jpg">
+  <%= image_tag '/images/flowers/HDB6.jpg', :width => '220px' %>
+  <br />
+  VND 350.000&nbsp;&nbsp;|&nbsp;&nbsp;$17.5
+</a>
+<span class="clear"></span>
+
+<a class="image_1st thumb" href="/images/flowers/HDB7_700.jpg">
+  <%= image_tag '/images/flowers/HDB7.jpg', :width => '220px' %>
+  <br />
+  VND 350.000&nbsp;&nbsp;|&nbsp;&nbsp;$17.5
+</a>
+<a class="image_2nd thumb" href="/images/flowers/HDB8_700.jpg">
+  <%= image_tag '/images/flowers/HDB8.jpg', :width => '220px' %>
+  <br />
+  VND 250.000&nbsp;&nbsp;|&nbsp;&nbsp;$12.5
+</a>
+<a class="image_3rd thumb" href="/images/flowers/HDB9_700.jpg">
+  <%= image_tag '/images/flowers/HDB9.jpg', :width => '220px' %>
+  <br />
+  VND 350.000&nbsp;&nbsp;|&nbsp;&nbsp;$17.5
+</a>
+<span class="clear"></span>
+
+<a class="image_1st thumb" href="/images/flowers/HDB10_700.jpg">
+  <%= image_tag '/images/flowers/HDB10.jpg', :width => '220px' %>
+  <br />
+  VND 350.000&nbsp;&nbsp;|&nbsp;&nbsp;$17.5
+</a>
+<a class="image_2nd thumb" href="/images/flowers/HDB11_700.jpg">
+  <%= image_tag '/images/flowers/HDB11.jpg', :width => '220px' %>
+  <br />
+  VND 400.000&nbsp;&nbsp;|&nbsp;&nbsp;$20
+</a>
+<a class="image_3rd thumb" href="/images/flowers/HDB12_700.jpg">
+  <%= image_tag '/images/flowers/HDB12.jpg', :width => '220px' %>
+  <br />
+  VND 500.000&nbsp;&nbsp;|&nbsp;&nbsp;$25
+</a>
+<span class="clear"></span>
+
+<a class="image_1st thumb" href="/images/flowers/HDB13_700.jpg">
+  <%= image_tag '/images/flowers/HDB13.jpg', :width => '220px' %>
+  <br />
+  VND 450.000&nbsp;&nbsp;|&nbsp;&nbsp;$22.5
+</a>
+<a class="image_2nd thumb" href="/images/flowers/HDB14_700.jpg">
+  <%= image_tag '/images/flowers/HDB14.jpg', :width => '220px' %>
+  <br />
+  VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
+</a>
+<span class="clear"></span>
+
+<a class="image_1st thumb" href="/images/flowers/HG1_700.jpg">
+  <%= image_tag '/images/flowers/HG1.jpg', :width => '220px' %>
+  <br />
+  VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
+</a>
+<a class="image_2nd thumb" href="/images/flowers/HG2_700.jpg">
+  <%= image_tag '/images/flowers/HG2.jpg', :width => '220px' %>
+  <br />
+  VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
+</a>
+<a class="image_3rd thumb" href="/images/flowers/HG3_700.jpg">
+  <%= image_tag '/images/flowers/HG3.jpg', :width => '220px' %>
+  <br />
+  VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
+</a>
+<span class="clear"></span>
+
+<a class="image_1st thumb" href="/images/flowers/HG4_700.jpg">
+  <%= image_tag '/images/flowers/HG4.jpg', :width => '220px' %>
+  <br />
+  VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
+</a>
+<a class="image_2nd thumb" href="/images/flowers/HG5_700.jpg">
+  <%= image_tag '/images/flowers/HG5.jpg', :width => '220px' %>
+  <br />
+  VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
+</a>
+<a class="image_3rd thumb" href="/images/flowers/HG6_700.jpg">
+  <%= image_tag '/images/flowers/HG6.jpg', :width => '220px' %>
+  <br />
+  VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
+</a>
+<span class="clear"></span>
+
+<a class="image_1st thumb" href="/images/flowers/HG7_700.jpg">
+  <%= image_tag '/images/flowers/HG7.jpg', :width => '220px' %>
+  <br />
+  VND 300.000&nbsp;&nbsp;|&nbsp;&nbsp;$15
+</a>
+<span class="clear"></span>
+
+<a class="image_1st thumb" href="/images/flowers/HV1_700.jpg">
+  <%= image_tag '/images/flowers/HV1.jpg', :width => '220px' %>
+  <br />
+  VND 800.000&nbsp;&nbsp;|&nbsp;&nbsp;$40
+</a>
+<a class="image_2nd thumb" href="/images/flowers/HV2_700.jpg">
+  <%= image_tag '/images/flowers/HV2.jpg', :width => '220px' %>
+  <br />
+  VND 250.000&nbsp;&nbsp;|&nbsp;&nbsp;$12.5
+</a>
