--- a/app/views/general/orchids.html.erb
+++ b/app/views/general/orchids.html.erb
@@ -1,5 +1,5 @@
 <div id="orchids_content">
-  <h1>CALL FOR THE BEST PRICE</h1>
+  <h1>CALL FOR BEST PRICE</h1>
   <p>
     Owning an orchids garden, we specialize in providing dendrobium orchids for flower shops, pagodas and small offices. If you are thinking of buying an elegant orchid pot or basket to your beloved people, we also offer retailed orchids for individuals. If you have any other requirements, please don’t hesitate to contact us. We’ll try our best to customize our products and services to satisfy your needs and wants.
   </p>
