--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,11 @@
 
     <%= javascript_include_tag "jquery-1.4.2.min.js" %>
     <%= javascript_include_tag "jquery.fancybox-1.3.1.js" %>
+    <%= javascript_include_tag "jquery.cycle.all.min.js" %>
     <%= javascript_include_tag "cufon-yui.js" %>
     <%= javascript_include_tag "AvantGarde.font.js" %>
     <script type="text/javascript">
-      Cufon.replace("#left");
+      Cufon.replace(".avant_garde");
     </script>
   </head>
 
@@ -30,7 +31,7 @@
       <div class="clear"></div>
     </div>
 
-    <div id="bottom">Copyright 2011 Minh Thu Orchids</div>
+    <div id="bottom" class="avant_garde">Copyright 2011 Minh Thu Orchids</div>
     <script type="text/javascript"> Cufon.now(); </script>
   </body>
 </html>
@@ -42,5 +43,17 @@
     $j('#body_container').show();
     $j('.thumb').fancybox();
     $j('.cufon-canvas').css("height", "20px");
+    sm_coinslider();
   });
+
+  function sm_coinslider() {
+  $j('#intro-slider').cycle({
+    fx:     'fade',
+    speed:   4000,
+    timeout: 3000,
+    navigation: true,
+    next:   '#intro-slider',
+    pause:   1
+  });
+  }
 </script>
