--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -2,7 +2,7 @@
 <%= link_to image_tag('/images/logo.png', :width => '220px'), {:controller => "general", :action => 'intro'}, :class => "#{'left_selected' if @controller.controller_name == 'general' && @controller.action_name == 'intro'}" %><br />
 </div>
 
-<div class="main_menu">
+<div class="main_menu avant_garde">
   <%= link_to 'intro', {:controller => "general", :action => 'intro'}, :class => "#{'left_selected' if @controller.controller_name == 'general' && @controller.action_name == 'intro'}" %><br />
   <%= link_to 'any occasion', {:controller => "general", :action => 'occasion'}, :class => "#{'left_selected' if @controller.controller_name == 'general' && @controller.action_name == 'occasion'}" %><br />
   <%= link_to 'birthday', {:controller => "general", :action => 'birthday'}, :class => "#{'left_selected' if @controller.controller_name == 'general' && @controller.action_name == 'birthday'}" %><br />
@@ -15,7 +15,7 @@
   <%= link_to 'orchids', {:controller => "general", :action => 'orchids'}, :class => "#{'left_selected' if @controller.controller_name == 'general' && @controller.action_name == 'orchids'}" %><br />
 </div>
 
-<div class="info">
+<div class="info avant_garde">
   <%= link_to 'order', {:controller => "general", :action => 'order'}, :class => "#{'left_selected' if @controller.controller_name == 'general' && @controller.action_name == 'order'}" %><br />
   <%= link_to 'delivery', {:controller => "general", :action => 'delivery'}, :class => "#{'left_selected' if @controller.controller_name == 'general' && @controller.action_name == 'delivery'}" %><br />
   <%= link_to 'contact', {:controller => "general", :action => 'contact'}, :class => "#{'left_selected' if @controller.controller_name == 'general' && @controller.action_name == 'contact'}" %>
