Add link for intro page

--- a/app/views/general/intro.html.erb
+++ b/app/views/general/intro.html.erb
@@ -12,5 +12,5 @@
 </div>
 
 <div id="intro-banner" class="avant_garde">
-  Enter Site
+  <%= link_to 'Enter Site', {:controller => "general", :action => 'occasion'} %>
 </div>
