--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -175,9 +175,11 @@ html, body {
     height: 525px;
 }
 
-#intro-banner {
+#intro-banner a {
     color: #812D7B;
     position: absolute;
     left: 900px;
-    top: 400px;
+    top: 430px;
+    text-decoration: none;
+    font-size: 18px;
 }
