Put the Enter site link to the top

--- a/app/views/general/intro.html.erb
+++ b/app/views/general/intro.html.erb
@@ -11,6 +11,4 @@
   <img src="/images/intro/intro10.png" />
 </div>
 
-<div id="intro-banner" class="avant_garde">
-  <%= link_to 'Enter Site', {:controller => "general", :action => 'occasion'} %>
-</div>
+<%= link_to 'Enter Site', {:controller => "general", :action => 'occasion'}, :class => "intro_banner avant_garde" %>
