--- a/app/views/layouts/intro.html.erb
+++ b/app/views/layouts/intro.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag 'application'  %>
 
     <%= javascript_include_tag "jquery-1.4.2.min.js" %>
-    <%= javascript_include_tag "jquery.fancybox-1.3.1.js" %>
+    <%= javascript_include_tag "jquery.cycle.all.min.js" %>
     <%= javascript_include_tag "cufon-yui.js" %>
     <%= javascript_include_tag "AvantGarde.font.js" %>
     <script type="text/javascript">
@@ -19,16 +19,9 @@
 
   <body>
     <div id="main">
-      <div id="left">
-        <%= render :partial => "/layouts/main_menu" if @controller.action_name != 'intro'%>
-      </div>
-
-      <div id="body_container">
-        <%= yield %>
-      </div>
-
-      <div class="clear"></div>
+      <%= yield %>
     </div>
+    <div class="clear"></div>
 
     <div id="bottom" class="avant_garde">Copyright 2011 Minh Thu Orchids</div>
     <script type="text/javascript"> Cufon.now(); </script>
@@ -39,9 +32,18 @@
   var $j = jQuery.noConflict();
 
   $j(document).ready(function(){
-    $j('#body_container').show();
-    $j('.thumb').fancybox();
     $j('.cufon-canvas').css("height", "20px");
     sm_coinslider();
   });
+
+  function sm_coinslider() {
+    $j('#intro-slider').cycle({
+      fx:     'fade',
+      speed:   4000,
+      timeout: 3000,
+      navigation: true,
+      next:   '#intro-slider',
+      pause:   1
+    });
+  }
 </script>
