--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -171,16 +171,17 @@ html, body {
 }
 
 #intro-slider img {
-    width: 700px;
-    height: 525px;
+    width: 800px;
+    height: 600px;
+    margin: 10px 80px;
 }
 
 a.intro_banner {
     color: #812D7B;
     position: absolute;
-    left: 900px;
-    top: 430px;
+    left: 850px;
+    top: 400px;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 16px;
     z-index: 999;
 }
