Edit the background position of contact pages

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -82,8 +82,10 @@ html, body {
 
 #contact_content, #delivery_content, #order_content {
     padding-top: 150px;
-    padding-bottom: 50px;
-    min-height: 300px;
+    margin-right: -10px;
+    margin-bottom: -50px;
+    padding-bottom: 30px;
+    min-height: 350px;
     background: url('../images/contact_bg.png') no-repeat top right;
 }
 
